Removed truncation on picker-confirm dialog (#1773)

--- a/editor-ui/sass/partials/_ui-common.scss
+++ b/editor-ui/sass/partials/_ui-common.scss
@@ -19,6 +19,7 @@
             margin: 0;
             margin-bottom: 8px;
             border-bottom: 1px solid $border-primary;
+            white-space: normal;
         }
 
         > .pcui-button {
