Migrate code editor read only message to PCUI (#1778)
* Migrate code editor read only message to PCUI

* Tweak height

Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/code-editor-v2/_code-editor.scss
+++ b/editor-ui/sass/code-editor-v2/_code-editor.scss
@@ -546,11 +546,10 @@ strong {
     }
 }
 
-.ui-label.readonly {
+.pcui-label.readonly {
     margin: 0 0 0 auto;
     padding: 0 10px;
-    height: 100%;
-    line-height: 34px;
+    line-height: 32px;
     background-color: $bcg-primary;
 }
 
