--- a/editor-ui/sass/code-editor-v2/_code-editor.scss
+++ b/editor-ui/sass/code-editor-v2/_code-editor.scss
@@ -609,6 +609,11 @@ strong {
         }
     }
 
+    > .pcui-text-input[placeholder]:after {
+        background-color: transparent;
+        line-height: 26px;
+    }
+
     > .pcui-button {
         font-size: 14px;
         line-height: 14px;
