View changes button on commit (#1799)
* Added button to view changes

* Closing diff window in new checkpoint returns to new checkpoint page

* Cleaned up the if statement logic

* Removed unused code

--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -10317,6 +10317,17 @@ strong {
                                         height: 100px;
                                         background: $bcg-darkest;
                                     }
+
+                                    .ui-button {
+                                        width: 140px;
+                                        text-transform: uppercase;
+                                        text-align: center;
+                                        align-self: center;
+                                        background: $bcg-primary;
+                                        font-size: 12px;
+                                        height: 28px;
+                                        line-height: 28px;
+                                    }
                                 }
                             }
                         }
