Editor UI front end dependencies upgrade (#1832)
* update the editor-ui to work with the latest dependencies

--- a/editor-ui/sass/_ui.scss
+++ b/editor-ui/sass/_ui.scss
@@ -2,7 +2,7 @@
     user-select: none;
 }
 
-$disabled-opacity: 0.4;
+$disabled-opacity: 0.4 * 100%;
 
 @font-face {
     font-family: inconsolatamedium;
