--- a/editor-ui/sass/code-editor-v2/_code-editor.scss
+++ b/editor-ui/sass/code-editor-v2/_code-editor.scss
@@ -567,7 +567,7 @@ strong {
         }
     }
 
-    > .pcui-text-input[placeholder]:after {
+    > .pcui-text-input[placeholder]::after {
         background-color: transparent;
         line-height: 26px;
     }
