update references of pcui-text-element to pcui-input-element

--- a/sass/_editor.scss
+++ b/sass/_editor.scss
@@ -3720,7 +3720,7 @@ strong {
             }
         }
 
-        > .pcui-text-input {
+        > .pcui-input-element {
             border: none;
             height: 32px;
             margin: 0;
