Revert "Merge pull request #2 from playcanvas/pcui-v4.0.0"
This reverts commit 39fad653011b4341a4fbed6152d2d925374e8bc8, reversing
changes made to ab95338cd0fb1ca3eccb6f2f6e6a450903c51c3d.

--- a/sass/_editor.scss
+++ b/sass/_editor.scss
@@ -3720,7 +3720,7 @@ strong {
             }
         }
 
-        > .pcui-input-element {
+        > .pcui-text-input {
             border: none;
             height: 32px;
             margin: 0;
