--- a/sass/editor/_editor-assets-panel.scss
+++ b/sass/editor/_editor-assets-panel.scss
@@ -702,7 +702,7 @@
             }
         }
 
-        .pcui-input-element {
+        .pcui-text-input {
             width: 230px;
             font-weight: bold;
             line-height: 24px;
