--- a/sass/editor/_editor-hierarchy-panel.scss
+++ b/sass/editor/_editor-hierarchy-panel.scss
@@ -143,7 +143,7 @@
                 border-top: 1px solid #293538;
             }
 
-            >.pcui-input-element.search {
+            >.pcui-text-input.search {
                 margin: 0;
                 width: 100%;
                 height: 30px;
