--- a/sass/code-editor-v2/_code-editor.scss
+++ b/sass/code-editor-v2/_code-editor.scss
@@ -595,20 +595,20 @@ strong {
     }
 }
 
-.ui-overlay.picker-fuzzy-search {
+.pcui-overlay.picker-fuzzy-search {
     z-index: 50;
 
-    > .overlay {
+    > .pcui-overlay-inner {
         background-color: transparent;
         cursor: default;
     }
 
-    > .content {
+    > .pcui-overlay-content {
         display: none;
     }
 }
 
-.ui-panel.picker-fuzzy-search {
+.pcui-container.picker-fuzzy-search:not(.pcui-overlay) {
     position: absolute;
     z-index: 51;
     top: 28px;
@@ -617,44 +617,42 @@ strong {
     height: 32px;
     line-height: 32px;
 
-    > .content {
-        height: 100%;
+    > .pcui-text-input {
+        width: 100%;
+        height: 32px;
+        line-height: 32px;
+        margin: 0;
+        padding: 0;
 
-        > .ui-text-field {
-            width: 100%;
-            height: 32px;
-            line-height: 32px;
-            margin: 0;
-            padding: 0;
-
-            > input {
-                font-size: 14px;
-            }
-
-            &:hover,
-            &.active,
-            &:focus,
-            &.focus {
-                background-color: $bcg-primary;
-            }
+        > input {
+            font-size: 14px;
         }
 
-        > .ui-menu {
+        &:hover,
+        &.active,
+        &:focus,
+        &.pcui-focus {
+            background-color: $bcg-primary;
+        }
+    }
+
+    > .pcui-menu {
+        top: 100%;
+
+        > .pcui-menu-items {
             position: absolute;
-            top: 100%;
-            left: 0;
+            width: 100%;
+            max-height: 50vh;
+            overflow-y: auto;
+            box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 50%);
 
-            > .inner {
-                position: absolute;
-                width: 100%;
-                max-height: 50vh;
-                overflow-y: auto;
-                box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 50%);
+            > .pcui-menu-item {
+                flex-shrink: 0;
 
-                > .ui-menu-item {
-                    > .title {
-                        padding: 5px 10px;
+                > .pcui-menu-item-content {
+                    > .pcui-label {
                         line-height: initial;
+                        margin: 5px 10px;
 
                         .name {
                             overflow: hidden;
@@ -671,20 +669,19 @@ strong {
                     }
 
                     &:hover {
-                        > .title {
-                            background: transparent;
-                            color: $text-dark;
-                        }
+                        background-color: inherit !important;
+                        color: inherit !important;
                     }
+                }
 
-                    &.selected {
-                        > .title {
-                            background: $text-darkest;
-                            color: $text-primary;
+                &.selected {
+                    background: $text-darkest;
 
-                            .path {
-                                color: $bcg-darkest;
-                            }
+                    .pcui-label {
+                        color: $text-primary;
+
+                        .path {
+                            color: $bcg-darkest;
                         }
                     }
                 }
