--- a/sass/code-editor-v2/_code-editor.scss
+++ b/sass/code-editor-v2/_code-editor.scss
@@ -363,111 +363,18 @@ strong {
     }
 }
 
-.ui-tree.files {
-    width: calc(100% - 5px);
+.pcui-treeview {
+    .pcui-treeview-item-icon::after {
+        font-size: 16px;
+    }
 
-    .ui-tree-item {
-        &.selected {
-            > .title {
-                > .icon {
-                    color: #fff;
-                }
-            }
+    .pcui-treeview-item.dirty {
+        .pcui-treeview-item-contents:not(.pcui-treeview-item-selected) {
+            color: transparentize($muted-yellow, 0.15);
         }
 
-        > .title {
-            > .text {
-                @extend .font-regular;
-            }
-
-            &:hover {
-                > .icon {
-                    color: #fff;
-                }
-            }
-
-            > .icon {
-                color: $text-darkest;
-
-                &::after {
-                    @extend .font-icon;
-
-                    font-size: 16px;
-                    line-height: 23px;
-                    text-align: center;
-                    background-color: transparent;
-                }
-            }
-        }
-
-        &.type-folder .icon::after {
-            content: '\E139';
-        }
-
-        &.type-script .icon::after {
-            content: '\E392';
-        }
-
-        &.type-html .icon::after {
-            content: '\E205';
-        }
-
-        &.type-css .icon::after {
-            content: '\E206';
-        }
-
-        &.type-shader .icon::after {
-            content: '\E219';
-        }
-
-        &.type-text .icon::after {
-            content: '\E209';
-        }
-
-        &.type-json .icon::after {
-            content: '\E207';
-        }
-
-        &.rename {
-            > .title {
-                background-color: $bcg-darkest;
-
-                > .text {
-                    display: none;
-                }
-
-                > .ui-text-field {
-                    width: calc(100% - 24px);
-                    height: 22px;
-                    margin: 0;
-                    padding: 0;
-                    border: none;
-                    background-color: transparent;
-
-                    > .field {
-                        padding: 0;
-                        @extend .font-regular;
-
-                        font-size: 14px;
-                    }
-                }
-            }
-        }
-
-        &.dirty {
-            > .title {
-                > .text {
-                    color: transparentize($muted-yellow, 0.15);
-                }
-            }
-
-            &.selected {
-                > .title {
-                    > .text {
-                        color: $muted-yellow;
-                    }
-                }
-            }
+        .pcui-treeview-item-contents.pcui-treeview-item-selected {
+            color: $muted-yellow;
         }
     }
 }
