--- a/sass/editor/_editor-asset-animstategraph-inspector.scss
+++ b/sass/editor/_editor-asset-animstategraph-inspector.scss
@@ -80,12 +80,12 @@
     width: 26px;
     height: 26px;
     z-index: 1000000;
-    color: rgba(255, 255, 255, 75%);
-    background-color: rgba(41, 53, 56, 50%);
+    color: rgb(255 255 255 / 75%);
+    background-color: rgb(41 53 56 / 50%);
 }
 
 .pcui-button.asset-animstategraph-inspector-close-button:not(.pcui-disabled, .pcui-readonly):hover {
-    background-color: rgba(41, 53, 56, 75%);
+    background-color: rgb(41 53 56 / 75%);
     color: #fff;
     box-shadow: none;
 }
