--- a/sass/editor/_editor-asset-cubemap-inspector.scss
+++ b/sass/editor/_editor-asset-cubemap-inspector.scss
@@ -70,7 +70,7 @@
     left: -7px;
     color: #b1b8ba;
     padding: 2px 4px;
-    background-color: rgba(44, 57, 60, 80%);
+    background-color: rgb(44 57 60 / 80%);
     font-size: 12px;
 }
 
