--- a/sass/editor/_editor-component-anim-inspector.scss
+++ b/sass/editor/_editor-component-anim-inspector.scss
@@ -45,7 +45,7 @@
     top: 0;
     width: 32px;
     height: 32px;
-    color: rgba(255, 255, 255, 75%);
+    color: rgb(255 255 255 / 75%);
     background-color: $bcg-dark;
     border: none;
     margin: 0;
