--- a/sass/_launch.scss
+++ b/sass/_launch.scss
@@ -86,7 +86,7 @@ canvas:focus {
     right: 0;
     z-index: 100;
     max-height: 40%;
-    background-color: rgba(0, 0, 0, 70%);
+    background-color: rgb(0 0 0 / 70%);
     font-size: 14px;
     font-family: inconsolatamedium, Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
     font-weight: normal;
@@ -116,7 +116,7 @@ canvas:focus {
         }
 
         a {
-            color: rgb(255, 143, 0);
+            color: rgb(255 143 0);
         }
     }
 }
