--- a/sass/editor/_editor-asset-model-inspector.scss
+++ b/sass/editor/_editor-asset-model-inspector.scss
@@ -68,6 +68,6 @@
         font-family: 'Proxima Nova Bold', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-weight: bold;
         font-style: normal;
-        margin: 0 0 6px 0;
+        margin: 0 0 6px;
     }
 }
