--- a/sass/editor/_editor-attributes-panel.scss
+++ b/sass/editor/_editor-attributes-panel.scss
@@ -81,6 +81,7 @@
 
             > .asset-preview {
                 max-height: 500px;
+
                 @extend .noSelect;
 
                 &.flipY {
@@ -168,6 +169,7 @@
                     &:hover {
                         color: $text-active;
                         text-decoration: underline;
+
                         @extend .noSelect;
                     }
                 }
@@ -191,7 +193,7 @@
                 > .ui-progress.field-progress {
                     width: 100%;
                     height: 8px;
-                    margin: 11px 3px 0 3px;
+                    margin: 11px 3px 0;
                 }
             }
         }
@@ -241,6 +243,7 @@
                         width: 24px;
                         line-height: 22px;
                         text-align: center;
+
                         @extend .font-icon;
 
                         &:hover {
@@ -416,6 +419,7 @@
                             color: $text-dark;
                             height: 28px;
                             line-height: 28px;
+
                             @extend .font-icon;
 
                             font-size: 16px;
@@ -545,6 +549,7 @@
                 margin: 0;
                 padding: 0;
                 border: none;
+
                 @extend .font-icon;
 
                 font-size: 16px;
@@ -581,6 +586,7 @@
             > .ui-list-item {
                 &::before {
                     content: '\E209';
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -612,7 +618,7 @@
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
                 background-color: #07f;
-                color: rgba(255, 255, 255, 50%);
+                color: rgb(255 255 255 / 50%);
 
                 &:hover {
                     outline: $text-active 2px solid;
@@ -650,6 +656,7 @@
                     line-height: 20px;
                     background-color: #364346;
                     cursor: pointer;
+
                     @extend .font-icon;
 
                     font-size: 16px;
@@ -715,6 +722,7 @@
                 > .title {
                     &::before {
                         content: '\E243';
+
                         @extend .font-icon;
 
                         font-size: 14px;
@@ -749,6 +757,7 @@
                     margin: 0;
                     padding: 0;
                     border: none;
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -931,6 +940,7 @@
                     &::before {
                         content: '\E120';
                         padding-right: 8px;
+
                         @extend .font-icon;
 
                         color: $text-active;
@@ -947,7 +957,7 @@
                     position: relative;
                     display: block;
                     width: calc(100% - 2px);
-                    margin: 0 0 6px 0;
+                    margin: 0 0 6px;
 
                     &:hover,
                     &:focus,
@@ -964,6 +974,7 @@
                         position: absolute;
                         top: 0;
                         left: 8px;
+
                         @extend .font-icon;
 
                         font-weight: bold;
@@ -979,6 +990,7 @@
                         padding: 0;
                         line-height: 24px;
                         color: $text-secondary;
+
                         @extend .font-bold;
 
                         font-weight: bold;
@@ -1016,6 +1028,7 @@
                         &.new {
                             &::before {
                                 content: '\E120';
+
                                 @extend .font-icon;
 
                                 font-size: 14px;
@@ -1059,6 +1072,7 @@
                                     height: 24px;
                                     margin: 4px 18px 4px 2px;
                                     cursor: move;
+
                                     @extend .noSelect;
 
                                     $color: mix($text-darkest, $bcg-primary, 50%);
@@ -1079,6 +1093,7 @@
 
                                 > .title {
                                     padding: 0 8px;
+
                                     @extend .noSelect;
 
                                     white-space: nowrap;
@@ -1128,6 +1143,7 @@
                                     padding: 0;
                                     background-color: transparent;
                                     border: none;
+
                                     @extend .font-icon;
 
                                     font-size: 14px;
@@ -1199,6 +1215,7 @@
                     &::before {
                         float: left;
                         content: '\E128';
+
                         @extend .font-icon;
 
                         font-size: 14px;
@@ -1239,9 +1256,10 @@
                 > .ui-label.loading {
                     display: block;
                     line-height: 32px;
-                    margin: 0 0 3px 0;
+                    margin: 0 0 3px;
                     padding: 0 8px;
                     font-size: 12px;
+
                     @extend .font-bold;
 
                     color: $text-primary;
@@ -1333,6 +1351,7 @@
                 padding-left: 30px;
                 height: 26px;
                 line-height: 28px;
+
                 @extend .font-bold;
 
                 &.hidden {
@@ -1352,6 +1371,7 @@
                     top: 0;
                     left: 8px;
                     content: '\E120';
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -1391,6 +1411,7 @@
                     content: '?';
                     line-height: 23px;
                     padding-right: 8px;
+
                     @extend .font-icon;
 
                     font-size: 16px;
@@ -1459,6 +1480,7 @@
                     position: absolute;
                     top: 0;
                     left: 8px;
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -1489,7 +1511,7 @@
             .ui-button.add-batch-group,
             .ui-button.add-clip,
             .ui-button.add-i18n-asset {
-                margin: 0 0 8px 0;
+                margin: 0 0 8px;
                 background-color: $bcg-dark;
 
                 &:hover {
@@ -1519,6 +1541,7 @@
                     top: 0;
                     left: 8px;
                     content: '\E120';
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -1604,6 +1627,7 @@
                                 height: 24px;
                                 margin: 4px 2px;
                                 cursor: move;
+
                                 @extend .noSelect;
 
                                 $color: mix($text-darkest, $bcg-primary, 50%);
@@ -1745,6 +1769,7 @@
                     padding: 0;
                     background-color: transparent;
                     border: none;
+
                     @extend .font-icon;
 
                     font-size: 14px;
@@ -1870,6 +1895,7 @@
                         float: right;
                         border-color: transparent;
                         background: transparent;
+
                         @extend .font-icon;
                     }
                 }
@@ -1901,6 +1927,7 @@
             border: none;
             padding: 0;
             color: #9ba1a3;
+
             @extend .font-icon;
 
             font-size: 14px;
@@ -2020,12 +2047,14 @@
         background-color: #2f3c3f;
         margin: 0;
         color: white;
+
         @extend .font-regular;
 
         h5 {
             font-size: 12px;
             margin: 0;
             color: $text-active;
+
             @extend .font-bold;
         }
     }
