--- a/sass/editor/_editor.scss
+++ b/sass/editor/_editor.scss
@@ -46,3 +46,5 @@
 @import 'editor-tooltip-reference';
 @import 'editor-release-notes';
 @import 'editor-fix-templates';
+@import 'editor-store-cms';
+@import 'editor-storeitem-panel';
