--- a/sass/editor/_editor-storeitem-panel.scss
+++ b/sass/editor/_editor-storeitem-panel.scss
@@ -32,7 +32,6 @@
         font-size: 11px;
         padding-top: 16px;
         padding-left: 21px;
-        padding-right: 27px;
         width: 180px;
         word-wrap: break-word;
     }
@@ -114,7 +113,7 @@
         float: left;
         padding-right: 5px;
         font-size: 20px;
-        left: 35px;
+        left: 17px;
         top: 33px;
         color: white;
         background-color: $bcg-primary;
@@ -126,7 +125,7 @@
         float: left;
         padding-right: 5px;
         font-size: 20px;
-        left: 73px;
+        left: 56px;
         top: 35px;
         color: white;
     }
@@ -207,13 +206,15 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        overflow-y: auto;
+        margin-bottom: 26px;
     }
 
     .storeitem-stats {
         display: flex;
         flex-direction: column;
         position: absolute;
-        bottom: 16px;
+        bottom: 0;
         padding-left: 10px;
         min-width: 85%;
     }
