Removed unused store tags. Added skybox store tag (#49)
* Removed unused store tags. Added skybox

* Using uppercase tags

@yak32 will changing the store item tags on Monday to use uppercase

* Fixed linting

---------

Co-authored-by: Steven Yau <syau@snapchat.com>

--- a/sass/editor/_editor-store-cms.scss
+++ b/sass/editor/_editor-store-cms.scss
@@ -219,6 +219,7 @@
         box-shadow: none;
         border-radius: initial;
         color: white;
+        text-transform: uppercase;
 
         &.selected {
             background-color: $bcg-primary;
