--- a/sass/editor/_editor-settings-rendering-panel.scss
+++ b/sass/editor/_editor-settings-rendering-panel.scss
@@ -4,15 +4,18 @@
     margin: 4px 10px;
 }
 
-.rendering-settings-restart-modal > .content > .ui-label {
-    margin-bottom: 8px;
-}
+.rendering-settings-restart-modal {
+    z-index: 10000; // TODO: Reorganize how the UI sets z-indexes
 
-.rendering-settings-restart-modal > .content {
-    display: flex;
-    flex-direction: column;
-    padding: 8px;
-    min-width: 500px;
-    align-items: center;
-    justify-content: center;
+    > .pcui-overlay-content {
+        z-index: 10001;
+        width: 420px;
+        height: auto;
+        padding: 8px;
+        text-align: center;
+
+        > .pcui-label {
+            white-space: normal;
+        }
+    }
 }
