Migrate Bubble element to PCUI (#104)
* Migrate Bubble element to PCUI

* Migrate to PCUI API

* Migrate to PCUI API

* Arrow functions

* Lint fix

--- a/sass/pcui/_pcui.scss
+++ b/sass/pcui/_pcui.scss
@@ -6,6 +6,7 @@
 
 // editor specific pcui controls and extensions
 @import 'pcui-common';
+@import 'pcui-bubble';
 @import 'pcui-color-input';
 @import 'pcui-curve-input';
 @import 'pcui-gradient-input';
