--- a/sass/_launch.scss
+++ b/sass/_launch.scss
@@ -53,10 +53,7 @@ body {
 #application-canvas {
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
 }
 
 #application-canvas.fill-mode-NONE {
