--- a/sass/editor/_editor-hierarchy-panel.scss
+++ b/sass/editor/_editor-hierarchy-panel.scss
@@ -387,10 +387,7 @@
     .pcui-container.progress-overlay {
         z-index: 10;
         position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+        inset: 0;
         background-color: $bcg-primary;
         justify-content: center;
         align-items: center;
