--- a/sass/code-editor/_code-editor.scss
+++ b/sass/code-editor/_code-editor.scss
@@ -57,10 +57,7 @@ strong {
 
 #ui-root {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     width: 100%;
     height: 100%;
     max-height: 100%;
