--- a/sass/editor/_editor-layout.scss
+++ b/sass/editor/_editor-layout.scss
@@ -2,12 +2,10 @@
 #layout-root {
     width: 100%;
     height: 100%;
-    grid-template-columns: 45px auto 1fr auto;
-    grid-template-rows: 1fr auto 24px;
-    grid-template-areas:
-        'toolbar hierarchy viewport attributes'
-        'toolbar hierarchy assets attributes'
-        'statusbar statusbar statusbar statusbar';
+    grid-template:
+        'toolbar hierarchy viewport attributes' 1fr
+        'toolbar hierarchy assets attributes' auto
+        'statusbar statusbar statusbar statusbar' 24px / 45px auto 1fr auto;
 }
 
 // left toolbar
