--- a/sass/editor/_editor-store-cms.scss
+++ b/sass/editor/_editor-store-cms.scss
@@ -234,10 +234,7 @@
         position: relative;
         padding-right: 12px;
         margin-bottom: 12px;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         width: 100%;
         overflow: auto;
         text-align: center;
