--- a/sass/pcui/_pcui-color-input.scss
+++ b/sass/pcui/_pcui-color-input.scss
@@ -14,10 +14,7 @@
 
     > div {
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         background-color: #000;
     }
 
