--- a/sass/pcui/_pcui-drop-manager.scss
+++ b/sass/pcui/_pcui-drop-manager.scss
@@ -1,9 +1,6 @@
 .pcui-dropmanager {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     opacity: 0;
     visibility: hidden;
     transition: opacity 100ms, visibility 100ms;
@@ -18,10 +15,7 @@
 }
 
 .pcui-dropmanager-wall-full {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
 }
 
 .pcui-dropmanager-wall-top {
@@ -46,10 +40,7 @@
 
 .pcui-dropmanager-targets {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0;
     pointer-events: auto;
 }
 
